# sfml-pong

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/gfx/: ball.cpp  ball.h  bat.cpp  bat.h
